changed implementation of window_average, so that it now uses c++20 std::span as a sliding window into the container

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library(statsdb
         include/statsdb/db.hpp
         include/statsdb/stats.hpp
         include/statsdb/utils.hpp
+        include/statsdb/enumerate.hpp
         )
 
 target_link_libraries(statsdb nlohmann_json::nlohmann_json fmt)
